--- a/package.json
+++ b/package.json
@@ -7,12 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "server": "node backend.cjs"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "json-server": "^0.17.3",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-datepicker": "^4.16.0",
